Fix ColumnValueScrubber count tracking and RecordingDataSource mutability
- Fix ColumnValueScrubber to correctly track the count of distinct column
  values so that custom replacements (like numbered replacements) function
  correctly when processing QueryResults. Refactor apply method to use
  the Streaming API.
- Update RecordingDataSource to return an immutable copy of recorded
  queries to prevent unintended modification when the data source is
  reset by the user.